--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ subprojects {
         implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
         implementation 'org.springframework.session:spring-session-core'
       //  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.5'
+        implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
 
     }
 
